getAHUList
